--- a/src/styles/setting.css
+++ b/src/styles/setting.css
@@ -30,8 +30,18 @@
   font-size: 25px;
   margin-bottom: 20px;
 }
-span {
-  /* display: ; */
-
-  margin-left: 10px;
+.setting-box button {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 400;
+  color: white;
+  background-color: #40916c;
+  margin-right: 10px;
+  width: 100px;
+  padding: 3px 10px;
+  border-radius: 5px;
+  border: none;
+}
+.setting-box button:hover {
+  background-color: #2e684e;
 }
